# mak3r

./: .gitignore  omniapp.py  omniapp.spec  requirements.txt  setup.py  setup_mac.py  setup_windows.py
CuraEngine_mac/: CuraEngine
example-pyside-cpp/hybridappbinding-cmake/: CMakeLists.txt
example-pyside-cpp/hybridappbinding-cmake/hybrid/: CMakeLists.txt  global.h
example-pyside-cpp/libhybrid/: Main.cpp  Makefile  hybrid.pro  libhybrid.so.1.0.0  moc_MainWindow.cpp
example-pyside-cpp/pyside-app/: main.py
gui/: app.py  mainwindow.py  mainwindow.ui
omni3dapp/: logger.py  omniapp.py
omni3dapp/avr_isp/: stk500v2.py
omni3dapp/bindings/hybridappbinding-cmake/hybrid/: CMakeLists.txt  typesystem_hybrid.xml
omni3dapp/bindings/libhybrid/: MainWindow.cpp  MainWindow.h  Makefile  libhybrid.so.1
omni3dapp/bindings/pyside-app/: main.py
omni3dapp/gui/: app.py  graphicsscene.py  mainwindow.py  mainwindow_ui.py  mainwindow_ui.ui  sceneview.py  shadereditor_ui.py  shadereditor_ui.ui
omni3dapp/gui/qml/: AxesController.qml  Bars.qml  ConfigButton.qml  ConnectButton.qml  GConsole.qml  LayersSlider.qml  LoadButton.qml  OptionsLayer.qml  PrintButton.qml  ProgressBar.qml  ScrollBar.qml  TempGauges.qml  ViewSelect.qml  ViewSelection.qml  Wizard.qml  main.qml
omni3dapp/gui/tools/: imageToMesh.py
omni3dapp/gui/util/: containers.py  engineResultView.py  gcode_text_styling.py  openglHelpers.py  openglscene.py  previewTools.py
omni3dapp/util/: gcodeInterpreter.py  machineCom.py  meshLoader.py  objectscene.py  pluginInfo.py  printableObject.py  profile.py  removableStorage.py  resources.py  shortcuts.py  sliceEngine.py  validators.py  version.py
omni3dapp/util/meshLoaders/: amf.py  dae.py  obj.py  stl.py
omni3dapp/util/printerConnection/: doodle3dConnect.py  dummyConnection.py  printerConnectionManager.py  serialConnection.py
omni3dapp/util/printing/: gcoder.py  host.py  printcore.py  pronsole.py  rpc.py  utils.py
omni3dapp/util/printing/power/: __init__.py
util/: profile.py  resources.py
